[gd_scene load_steps=5 format=3 uid="uid://daqlbvtppcfs"]

[ext_resource type="Script" path="res://scripts/settings_menu_panel.gd" id="1_4cjws"]
[ext_resource type="Theme" uid="uid://dn1o6shwhi1wx" path="res://shaders-themes/main_theme.tres" id="2_yrtly"]
[ext_resource type="LabelSettings" uid="uid://bma68305bgflc" path="res://assets/new_label_settings.tres" id="3_vwlhb"]
[ext_resource type="Texture2D" uid="uid://b8tej6ortppkj" path="res://assets/sprites/ui/button_press.png" id="4_snqco"]

[node name="SettingsMenuPanel" type="VBoxContainer"]
visible = false
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_4cjws")

[node name="MasterVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="MasterVolume"]
layout_mode = 2
offset_top = 20.0
offset_right = 200.0
offset_bottom = 45.0
max_value = 10.0

[node name="Label" type="Label" parent="MasterVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_right = 200.0
offset_bottom = 25.0
theme = ExtResource("2_yrtly")
text = "Master Volume"
horizontal_alignment = 1

[node name="MusicVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="MusicVolume"]
layout_mode = 2
offset_top = 20.0
offset_right = 200.0
offset_bottom = 45.0
max_value = 10.0

[node name="Label" type="Label" parent="MusicVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_right = 200.0
offset_bottom = 25.0
theme = ExtResource("2_yrtly")
text = "Music Volume"
horizontal_alignment = 1

[node name="SFXVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="SFXVolume"]
layout_mode = 2
offset_top = 20.0
offset_right = 200.0
offset_bottom = 45.0
theme = ExtResource("2_yrtly")
max_value = 10.0

[node name="Label" type="Label" parent="SFXVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_right = 200.0
offset_bottom = 25.0
theme = ExtResource("2_yrtly")
text = "SFX Volume"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ReturnButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
texture_normal = ExtResource("4_snqco")
texture_pressed = ExtResource("4_snqco")
stretch_mode = 0

[node name="Label" type="Label" parent="ReturnButton"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Return
"
label_settings = ExtResource("3_vwlhb")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="drag_started" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_started"]
[connection signal="value_changed" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
